--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 
 <body>
-  <header role=banner>
+  <header role="banner">
     <div class="masthead">
       <h1>
         <img src="images/logo.svg" alt="Arrrgene’s Treasure Tours logo">
         <span>Arrrgene’s Treasure Tours</span>
       </h1>
-      <nav role="navagation">
-        <div class="nav" role="navigation">
+      <nav role="navigation">
+        <div class="nav">
           <ul>
             <li><a href="#">Tours</a></li>
             <li><a href="#">Ships</a></li>
@@ -29,31 +29,32 @@
 
   <main>
     <div role="main">
-
-      <div class="banner">
-        <img src="images/banner.jpg" alt="brown map in background">
-        <div>
-          <h2>Ahoy, me Hearties!</h2>
-          <p>Batten down the hatches and sail me corsair to plentiful doubloons.</p>
-          <a href="#">Book a tour</a>
+      <section>
+        <div class="banner">
+          <img src="images/banner.jpg" alt="brown map in background">
+          <div>
+            <h2>Ahoy, me Hearties!</h2>
+            <p>Batten down the hatches and sail me corsair to plentiful doubloons.</p>
+            <a href="#">Book a tour</a>
+          </div>
         </div>
-      </div>
-
-      <div class="ship">
-        <div class="card">
-          <img src="images/ship.svg" alt="Brown Pirate Ship">
-          <h2>Heave Ho!</h2>
-          <p>Weigh anchor and hoist the mizzen, ya old salt, aboard shipshape <i>Arrrgonaut</i>.</p>
-          <a href="#">See the specs</a>
-        </div>
-      </div>
-
+        <article>
+          <div class="ship">
+            <div class="card">
+              <img src="images/ship.svg" alt="Brown Pirate Ship">
+              <h2>Heave Ho!</h2>
+              <p>Weigh anchor and hoist the mizzen, ya old salt, aboard shipshape <i>Arrrgonaut</i>.</p>
+              <a href="#">See the specs</a>
+            </div>
+          </div>
+        </article>
+      </section>
     </div>
   </main>
 
   <footer>
     <div class="footer">
-      <p>© Arrrgene’s Treasure Tours</p>
+      <p role="contentinfo">© Arrrgene’s Treasure Tours</p>
     </div>
   </footer>
 </body>
